final-changes-2-on index and team and contact page done

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                                 <img src="/MIW_Website_Assets/Kaththi-01.png"
                                     class="title object-contain w-full sm:h-72" />
                             </div>
-                            <img src="/MIW_Website_Assets/Kaththi-02.png" class="character w-full h-72 pt-10" />
+                            <img src="/MIW_Website_Assets/Kaththi-02.png" class="character w-full h-72 pt-5" />
                         </div>
                     </a>
                 </div>
@@ -317,7 +317,7 @@
                     This futuristic bangle-style iPod featured touch-sensitive controls, virtual earphones, and an
                     adjustable fit, redefining personal audio experiences.
                 </p>
-                <button class="bg-black mt-4 sm:mt-10 border border-white px-6 py-3 text-lg text-white font-semibold"
+                <button class="bg-black mt-4 sm:mt-10 border border-white px-3 sm:px-6 py-2 sm:py-3 text-sm sm:text-lg text-white font-semibold"
                     onclick="window.location.href='/work.html'">
                     CLICK FOR MORE
                 </button>
