--- a/team.html
+++ b/team.html
@@ -80,8 +80,8 @@
       <!-- Person 1 -->
       <div class="w-full pt-10 flex gap-2 justify-start">
         <div class="text-right flex flex-col justify-center">
-          <h2 class="text-sm text-base sm:text-xl font-bold">GOPI PRASANNAA</h2>
-          <p class="text-xs text-sm sm:text-lg text-gray-400">CEO / FOUNDER</p>
+          <h2 class="text-sm sm:text-xl font-bold text-[#595959]">GOPI PRASANNAA</h2>
+          <p class="text-xs text-sm sm:text-lg text-[#a8a8a8]">CEO / FOUNDER</p>
         </div>
         <div class="relative">
           <img src="/png-team/specs-dude.png" alt="Person 1" class="relative w-40 sm:w-52 z-10">
@@ -92,8 +92,8 @@
       <!-- Person 2 -->
       <div class="w-full pt-16 sm:pt-0 flex gap-2 justify-start flex-row-reverse">
         <div class="text-left flex flex-col justify-center">
-          <h2 class="text-sm text-base sm:text-xl font-bold">S V UDAYAKUMAR</h2>
-          <p class="text-xs text-sm sm:text-lg text-gray-400">CREATIVE DIRECTOR</p>
+          <h2 class="text-sm text-base sm:text-xl font-bold text-[#595959]">S V UDAYAKUMAR</h2>
+          <p class="text-xs text-sm sm:text-lg text-[#a8a8a8]">CREATIVE DIRECTOR</p>
         </div>
         <div class="relative">
           <img src="/png-team/beard-dude.png" alt="Person 2" class="relative w-40 sm:w-48 z-10">
@@ -104,8 +104,8 @@
       <!-- Person 3 -->
       <div class="w-full pt-16 sm:pt-0 flex gap-2 justify-start">
         <div class="text-right flex flex-col justify-center">
-          <h2 class="text-sm text-base sm:text-xl font-bold">GOPI PRASANNAA</h2>
-          <p class="text-xs text-sm sm:text-lg text-gray-400">CEO / FOUNDER</p>
+          <h2 class="text-sm text-base sm:text-xl font-bold text-[#595959]">GOPI PRASANNAA</h2>
+          <p class="text-xs text-sm sm:text-lg text-[#a8a8a8]">CEO / FOUNDER</p>
         </div>
         <div class="relative">
           <img src="/png-team/young-dude.png" alt="Person 3" class="relative w-40 sm:w-52 z-10">
@@ -116,8 +116,8 @@
       <!-- Person 4 -->
       <div class="w-full pt-16 pt-0 flex sm:gap-2 justify-start flex-row-reverse">
         <div class="text-left flex flex-col justify-center">
-          <h2 class="text-sm text-base sm:text-xl font-bold">S V UDAYAKUMAR</h2>
-          <p class="text-xs text-sm sm:text-lg text-gray-400">CREATIVE DIRECTOR</p>
+          <h2 class="text-sm text-base sm:text-xl font-bold text-[#595959]">S V UDAYAKUMAR</h2>
+          <p class="text-xs text-sm sm:text-lg text-[#a8a8a8]">CREATIVE DIRECTOR</p>
         </div>
         <div class="relative">
           <img src="/png-team/girl.png" alt="Person 4" class="relative w-40 sm:w-48 z-10">
