--- a/team.html
+++ b/team.html
@@ -134,7 +134,7 @@
     </section>
 
 
-    <section class="relative py-40">
+    <section class="relative py-40 px-4">
         <!-- First Row (5 Images) -->
         <div class="flex justify-center space-x-0">
             <div class="person relative group">
@@ -152,7 +152,7 @@
                 <!-- Image -->
                 <img src="/png-team/team01.png" alt="Person X" class="w-24 h-auto sm:w-32">
                 <!-- Name and Designation (Shown on Hover) -->
-                <div class="absolute top-[-5rem] left-[calc(50%-70px)] transform -translate-y-2 text-left opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                <div class="absolute top-[-5rem] left-auto right-[-30px] sm:left-[calc(50%-70px)] sm:right-auto transform -translate-y-2 text-left sm:text-left opacity-0 group-hover:opacity-100 transition-opacity duration-300">                <!-- <div class="absolute top-[-5rem] left-[calc(50%-70px)] transform -translate-y-2 text-left opacity-0 group-hover:opacity-100 transition-opacity duration-300"> -->
                     <p class="text-sm font-bold text-gray-700">Person 1</p>
                     <p class="text-xs text-gray-500">Designation</p>
                 </div>
@@ -219,14 +219,16 @@
             <div class="person relative group">
                 <div class="absolute top-[-10rem] left-1/2 transform -translate-x-1/2">
                     <!-- Vertical Line -->
-                    <div class="bg-black h-[190px] w-[1px] opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
+                    <div class="bg-black h-[180px] w-[1px] opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
                     <!-- Round Pointer -->
                     <div class="absolute top-[-5px] left-[-2.5px] w-1.5 h-1.5 bg-black rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
                 </div>
     
 
                 <img src="/png-team/team01.png" alt="Person X" class="w-24 h-auto sm:w-32">
-                <div class="absolute top-[-10rem] left-[calc(50%-70px)] transform -translate-y-2 text-left opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                <!-- <div class="absolute top-[-10rem] left-[calc(50%-70px)] transform -translate-y-2 text-left opacity-0 group-hover:opacity-100 transition-opacity duration-300"> -->
+                <div class="absolute top-[-10rem] left-auto right-[-22px] sm:left-[calc(50%-70px)] sm:right-auto transform -translate-y-2 text-left sm:text-left opacity-0 group-hover:opacity-100 transition-opacity duration-300">                <!-- <div class="absolute top-[-5rem] left-[calc(50%-70px)] transform -translate-y-2 text-left opacity-0 group-hover:opacity-100 transition-opacity duration-300"> -->
+
                     <p class="text-sm font-bold text-gray-800">Person 6</p>
                     <p class="text-xs text-gray-500">Designation</p>
                 </div>
@@ -234,7 +236,7 @@
             <div class="person relative group">
                 <div class="absolute top-[-10rem] left-1/2 transform -translate-x-1/2">
                     <!-- Vertical Line -->
-                    <div class="bg-black h-[190px] w-[1px] opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
+                    <div class="bg-black h-[180px] w-[1px] opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
                     <!-- Round Pointer -->
                     <div class="absolute top-[-5px] left-[-2.5px] w-1.5 h-1.5 bg-black rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
                 </div>
@@ -247,7 +249,7 @@
             <div class="person relative group">
                 <div class="absolute top-[-10rem] left-1/2 transform -translate-x-1/2">
                     <!-- Vertical Line -->
-                    <div class="bg-black h-[190px] w-[1px] opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
+                    <div class="bg-black h-[180px] w-[1px] opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
                     <!-- Round Pointer -->
                     <div class="absolute top-[-5px] left-[-2.5px] w-1.5 h-1.5 bg-black rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
                 </div>
@@ -260,7 +262,7 @@
             <div class="person relative group">
                 <div class="absolute top-[-10rem] left-1/2 transform -translate-x-1/2">
                     <!-- Vertical Line -->
-                    <div class="bg-black h-[190px] w-[1px] opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
+                    <div class="bg-black h-[180px] w-[1px] opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
                     <!-- Round Pointer -->
                     <div class="absolute top-[-5px] left-[-2.5px] w-1.5 h-1.5 bg-black rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
                 </div>
