button alignment and kathi image stretch issue

--- a/index.html
+++ b/index.html
@@ -293,7 +293,8 @@
                                 <img src="/MIW_Website_Assets/Kaththi-01.png"
                                     class="title object-contain w-full sm:h-72" />
                             </div>
-                            <img src="/MIW_Website_Assets/Kaththi-02.png" class="character w-full h-72 pt-5" />
+                            <img src="/MIW_Website_Assets/Kaththi-02.png" class="character w-full h-72" />
+
                         </div>
                     </a>
                 </div>
