--- a/work.html
+++ b/work.html
@@ -243,8 +243,8 @@
     </div> -->
 
     <button id="closePopup"
-        class="hidden fixed top-4 right-4 bg-gray-800 text-white px-4 py-2 text-lg rounded-full shadow-lg hover:bg-gray-700 transition z-50">
-        ✖ Close
+        class="hidden fixed  top-7 right-6 sm:right-12 w-10 h-10 flex items-center justify-center text-white bg-gray-800 hover:bg-gray-700 rounded-full text-xl shadow-lg z-50">
+        ✖
     </button>
 
     <div id="work-details-popup"
