button alignment and kathi image stretch issue with padding

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <div class="w-full grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3">
                     <!-- Left Image -->
                     <a href="#" onclick="event.preventDefault();" class="flex justify-center" data-autoclick>
-                        <div class="card mb-20 sm:mb-0">
+                        <div class="card mb-20 sm:mb-0 pb-2 sm:pb-0">
                             <div class="wrapper">
                                 <img src="/MIW_Website_Assets/SD-10.png"
                                     class="title object-contain w-full h-60 sm:h-full" />
@@ -277,7 +277,7 @@
 
                     <!-- Middle Image (Higher than others) -->
                     <a href="#" onclick="event.preventDefault();" class="flex justify-center" data-autoclick>
-                        <div class="card mb-20 sm:mb-0">
+                        <div class="card mb-20 sm:mb-0 pb-3 sm:pb-0">
                             <div class="wrapper">
                                 <img src="/MIW_Website_Assets/PS-Nandini-01png.png"
                                     class="title object-cover w-full h-72 sm:h-80" />
