--- a/work.html
+++ b/work.html
@@ -244,7 +244,9 @@
 
     <button id="closePopup"
         class="hidden fixed  top-7 right-6 sm:right-12 w-10 h-10 flex items-center justify-center text-white bg-gray-800 hover:bg-gray-700 rounded-full text-xl shadow-lg z-50">
-        ✖
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+          </svg>
     </button>
 
     <div id="work-details-popup"
@@ -273,7 +275,9 @@
         <div class="relative">
             <button onclick="closeFullscreenImage()"
                 class="absolute top-4 right-4 w-10 h-10 flex items-center justify-center text-white bg-gray-800 hover:bg-gray-700 rounded-full text-xl shadow-lg z-50">
-                ✖
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                  </svg>
             </button>
 
             <img id="fullscreen-img" src="" alt="Zoomed"
