contact animation and close button placement

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <!-- Text Content (Left) -->
             <div class="w-full lg:w-1/2 text-left">
                 <h1 class="text-5xl lg:text-6xl font-sf font-medium mb-4">ibangle</h1>
-                <p class="text-gray-400 text-lg leading-relaxed">
+                <p class="text-gray-400 text-[15px] sm:text-lg leading-relaxed">
                     <br />
                     The iBangle, designed by Gopi Prasannaa in 2008, was the first-of-its-kind wearable music
                     device, conceptualized long before Apple introduced wearables.
