--- a/work.html
+++ b/work.html
@@ -243,10 +243,10 @@
     </div> -->
 
     <button id="closePopup"
-        class="hidden fixed  top-7 right-6 sm:right-12 w-10 h-10 flex items-center justify-center text-white bg-gray-800 hover:bg-gray-700 rounded-full text-xl shadow-lg z-50">
+        class="hidden fixed top-9 right-6 sm:right-12 w-10 h-10 flex items-center justify-center text-white bg-gray-800 hover:bg-gray-700 rounded-full text-xl shadow-lg z-50">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-          </svg>
+        </svg>
     </button>
 
     <div id="work-details-popup"
@@ -274,14 +274,14 @@
         class="hidden fixed inset-0 bg-black bg-opacity-90 flex items-center justify-center z-[60]">
         <div class="relative">
             <button onclick="closeFullscreenImage()"
-                class="absolute top-4 right-4 w-10 h-10 flex items-center justify-center text-white bg-gray-800 hover:bg-gray-700 rounded-full text-xl shadow-lg z-50">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6">
+                class="absolute -top-4 -right-4 sm:-top-6 sm:-right-6 w-10 h-10 flex items-center justify-center text-white bg-gray-800 hover:bg-gray-700 rounded-full text-xl shadow-lg z-50">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                    class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-                  </svg>
+                </svg>
             </button>
 
-            <img id="fullscreen-img" src="" alt="Zoomed"
-                class="max-w-[90vw] max-h-[90vh] rounded-lg shadow-2xl ">
+            <img id="fullscreen-img" src="" alt="Zoomed" class="max-w-[90vw] max-h-[90vh] rounded-lg shadow-2xl ">
         </div>
     </div>
 
@@ -547,7 +547,7 @@
                 const imgElement = document.createElement('img');
                 imgElement.src = src;
                 imgElement.alt = data.title; // Set alt text to the title for accessibility
-                imgElement.className = 'w-full h-auto rounded-md cursor-zoom-in transition group-hover:opacity-90';
+                imgElement.className = 'w-full h-auto rounded-md cursor-zoom-in transition group-hover:opacity-90 min-h-[400px] object-cover sm:min-h-0 sm:object-contain';
                 imgElement.onclick = () => openFullscreenImage(src);
 
                 detailsImageSrc.appendChild(imgElement);
