remove img transition for service

--- a/service.html
+++ b/service.html
@@ -26,13 +26,13 @@
 
 		/* Apply a smooth transition */
 		.grid img {
-			transition: transform 0.5s ease, box-shadow 0.5s ease;
-			transform-origin: center;
+			/* transition: transform 0.5s ease, box-shadow 0.5s ease; */
+			/* transform-origin: center; */
 		}
 
 		/* Optional: Adding a slight tilt effect */
 		.grid img:hover {
-			transform: scale(1) rotateX(8deg) rotateY(8deg);
+			/* transform: scale(1) rotateX(8deg) rotateY(8deg); */
 			overflow: hidden;
 		}
 
